# imgui-boilerplate

./: .gitignore  CMakeLists.txt  FiraMono.hpp  Makefile  README.md  main.cpp  window.cpp  window.h  window.hpp
fonts/: FiraMono_Medium.h  FiraMono_Regular.h  FiraSans_Regular.h
